# ynab-commbank-csv

./: Cargo.toml  README.md
src/: cli.rs  dictionary.rs  main.rs
