[package]
name = "ynab-csv-importer"
version = "0.1.0"
authors = ["Kevin Velasco <me@kvnvelasco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
failure = "0.1.5"
clap = "2.33.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.9"
regex = "1.3.1"


